add soap functionality, test method for letöltés, remove unneccessary dependencies, fix lots of errors